crates/keron-lang/tests/corpus/errors/check/struct_missing_required_arg.snap
---
source: crates/keron-lang/tests/harness/mod.rs
---
error: missing field `y` for struct `Point`
  --> 3:16
  |
3 | val p: Point = Point { x: 0 }
  |                ^^^^^^^^^^^^^^^
